--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -69,11 +69,9 @@ body {
 .section-a {
   padding-bottom: 2rem;
 }
-@media (min-width: 700px) {
-  .section-a .section-text {
-    columns: 2;
-    column-gap: 2rem;
-  }
+.section-a .section-text {
+  columns: 20rem auto;
+  column-gap: 2rem;
 }
 
 .section-b {
@@ -122,14 +120,7 @@ body {
 }
 .section-d-box {
   padding: 2rem;
-}
-@media (min-width: 700px) {
-  .section-d {
-    flex-wrap: nowrap;
-  }
-  .section-d-box {
-    width: 50%;
-  }
+  flex: 1 1 20rem;
 }
 .section-d-box:first-child {
   background-color: var(--light-blue-color);
@@ -150,15 +141,7 @@ body {
   color: var(--white-color);
 }
 .footer-text {
-  width: 100%;
-}
-@media (min-width: 700px) {
-  .footer {
-    flex-wrap: nowrap;
-  }
-  .footer-text {
-    width: 50%;
-  }
+  flex: 1 1 20rem;
 }
 .footer-link {
   color: var(--light-blue-color);
