--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -30,12 +30,26 @@ body {
 
 .header {
   min-height: 450px;
+  color: var(--dark-white-color);
+  position: relative;
+}
+.header-bg {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
   background-color: var(--dark-grey-color);
+  z-index: -1;
+}
+.header-bg-img {
+  width: 100%;
+  height: 100%;
   background-image: url("https://static.pexels.com/photos/248515/pexels-photo-248515.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  color: var(--dark-white-color);
+  opacity: 0.4;
 }
 .content-wrap {
   max-width: 880px;
